# YBI-Internship

./: Day1.ipynb
WordSprint-AI-Blog-Generator-main/: .gitignore  LICENSE  pyproject.toml
WordSprint-AI-Blog-Generator-main/.github/workflows/: generate_ainews.yml  generate_article.yml
WordSprint-AI-Blog-Generator-main/backend/: run.py  schedule.json
WordSprint-AI-Blog-Generator-main/backend/config/: config.py
WordSprint-AI-Blog-Generator-main/backend/data/input/: machine_learning.json  statistics.json
WordSprint-AI-Blog-Generator-main/backend/graph/: graph.py  nodes.py  state.py
WordSprint-AI-Blog-Generator-main/backend/prompts/: blog_generation.txt  metadata_generation.txt
WordSprint-AI-Blog-Generator-main/frontend/: category.html
WordSprint-AI-Blog-Generator-main/frontend/blogs/ainews/: the-week-in-ai-3.md  the-week-in-ai-4.md  the-week-in-ai-5.md
WordSprint-AI-Blog-Generator-main/frontend/blogs/cv/: articles.json  computer-vision-intro.md  digital-image-basics.md  image-filtering-convolution.md
WordSprint-AI-Blog-Generator-main/frontend/blogs/genai/: articles.json  generative-ai-models.md
WordSprint-AI-Blog-Generator-main/frontend/blogs/ml/: machine-learning-challenges.md  machine-learning-life-cycle.md  regression-ml.md  supervised-ml-classification.md
WordSprint-AI-Blog-Generator-main/frontend/blogs/nlp/: articles.json  nlp-tokenization.md  stemming-lemmatization.md  stopwords-text-cleaning.md
WordSprint-AI-Blog-Generator-main/frontend/css/: home.css  main.css  post.css
WordSprint-AI-Blog-Generator-main/frontend/js/: blogs-data.js  post.js
(+35 files in other folders)
