[project]
name = "wordsprint"
version = "0.1.0"
description = "AI-powered technical blog generator project submission by Jyotirmaya Behera"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.0.0",
    "langchain-core>=1.2.16",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.1",
]

